--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="todos">
-                <ul id="todo-ul"></ul>
+                <ul id="todo-ul"></ul> /*li leri buraya ekleyeceğiz*/
             </div>
 
         </main>
